--- a/startbootstrap-freelancer-1.0.3/index1.html
+++ b/startbootstrap-freelancer-1.0.3/index1.html
@@ -98,10 +98,10 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script>
-        var NW = ["smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg", "smiley_face.jpg"];
-        var NE = ["profile.png", "profile.png", "profile.png", "profile.png"];
-        var AFR = [];
-        var EA = [];
+        var NW = ["nw1.jpg", "nw2.jpg", "nw3.jpg", "nw4.jpg", "nw5.jpg", ];
+        var NE = ["ne1.jpg", "ne2.jpg", "ne3.jpg", "ne4.jpg", "ne5.jpg", "ne6.jpg", "ne7.jpg" ];
+        var AFR = ["afr1.jpg", "afr2.jpg", "afr3.jpg", "afr4.jpg", "afr5.jpg", "afr6.jpg"];
+        var EA = ["ea1.jpg", "ea2.png", "ea3.jpg", "ea4.jpg", "ea5.jpg", "ea6.jpg"];
 
         var _imgSize;
 
