added manual table population.

--- a/startbootstrap-freelancer-1.0.3/template_no.html
+++ b/startbootstrap-freelancer-1.0.3/template_no.html
@@ -69,7 +69,7 @@
         </div>
         <div class="jumbotron">
             <div id="imgContainer">                
-                <table id="NW" hidden>
+                <table id="NWT" hidden>
                     <tr>
                         <td>
                             <img src="img/nw1.jpg" alt="image">
@@ -94,6 +94,215 @@
                             <div class="comment"></div>
                         </td>
                     </tr>
+                </table>
+                <table id="NET" hidden>
+                    <tr>
+                        <td>
+                            <img src="img/ne1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne2.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/ne5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne6.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne7.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                </table>
+                <table id="AFRT" hidden>
+                    <tr>
+                        <td>
+                            <img src="img/afr1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr2.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/afr5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr6.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>                      
+                    </tr>
+                </table>
+                <table id="EAT" hidden>
+                    <tr>
+                        <td>
+                            <img src="img/ea1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea2.png" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/ea5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea6.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                </table>
+                <table id="ALLT" hidden>
+                    <tr>
+                        <td>
+                            <img src="img/nw1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/nw2.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/nw3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/nw4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>                        
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/nw5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>                     
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/ne1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne2.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/ne5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne6.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ne7.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/afr1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr2.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/afr5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/afr6.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <img src="img/ea1.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea2.png" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea3.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea4.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="img/ea5.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                        <td>
+                            <img src="img/ea6.jpg" alt="image">
+                            <div class="comment"></div>
+                        </td>
+                    </tr>                    
                 </table>
             </div>
         </div>
@@ -184,23 +393,55 @@
         function fetchImgContainer() {
             //populate the sources at run time
             if (event.target.id === "NW") {
+                $('#NET').hide();
+                $('#AFRT').hide();
+                $('#EAT').hide();
+                $('#ALLT').hide();
 
-                $(event.target.id).show();
+                $('#NWT').show();
                 //mapImagesToRegion(NW);
                 //_imgSize = NW.length;
             }
-            //else if (event.target.id === "NE") {
-            //    mapImagesToRegion(NE);
-            //    _imgSize = NE.length;
-            //}
-            //else if (event.target.id === "AFR") {
-            //    mapImagesToRegion(AFR);
-            //    _imgSize = AFR.length;
-            //}
-            //else if (event.target.id === "EA") {
-            //    mapImagesToRegion(EA);
-            //    _imgSize = EA.length;
-            //}
+            else if (event.target.id === "NE") {
+                $('#NWT').hide();
+                $('#AFRT').hide();
+                $('#EAT').hide();
+                $('#ALLT').hide();
+
+                $('#NET').show();
+                //mapImagesToRegion(NE);
+                //_imgSize = NE.length;
+            }
+            else if (event.target.id === "AFR") {
+                $('#NET').hide();
+                $('#NWT').hide();
+                $('#EAT').hide();
+                $('#ALLT').hide();
+
+                $('#AFRT').show();
+                //mapImagesToRegion(AFR);
+                //_imgSize = AFR.length;
+            }
+            else if (event.target.id === "EA") {
+                $('#NET').hide();
+                $('#NWT').hide();                
+                $('#ALLT').hide();
+                $('#AFRT').hide();
+
+                $('#EAT').show();
+                //mapImagesToRegion(EA);
+                //_imgSize = EA.length;
+            }
+            else if (event.target.id === "ALL") {
+                $('#NET').hide();
+                $('#NWT').hide();
+                $('#EAT').hide();
+                $('#AFRT').hide();
+
+                $('#ALLT').show();
+                //mapImagesToRegion(EA);
+                //_imgSize = EA.length;
+            }
         }
 
         //this function maps regions of where the images were taken to the server image location
