--- a/startbootstrap-freelancer-1.0.3/template_no.html
+++ b/startbootstrap-freelancer-1.0.3/template_no.html
@@ -22,14 +22,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="#">Template Demo</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li class="dropdown">
+                        <li class="active"><a href="#">Fake Home</a></li>
+                        <li><a href="#">Fake About</a></li>
+                        <li><a href="#">Fake Contact</a></li>
+                       <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Action</a></li>
@@ -40,12 +40,12 @@
                                 <li><a href="#">Separated link</a></li>
                                 <li><a href="#">One more separated link</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+                       <!--  <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
                         <li><a href="../navbar-static-top/">Static top</a></li>
-                        <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                        <li><a href="../navbar-fixed-top/">Fixed top</a></li> -->
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
